--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
   background-color: #111;
   display: flex;
   flex-direction: column;
-  /* overflow: hidden; */
 }
 h1 {
   color: rgb(68, 68, 136);
   text-align: center;
+  font-size: 50px;
 }
 .label {
   text-align: center;
@@ -21,13 +21,16 @@ h1 {
   margin: auto;
 }
 #name {
-  margin-bottom: 40px;
+  margin-top: 20px;
 }
 #nameHead {
+  color: aqua;
   margin-top: 40px;
-  font-size: 25px;
+  font-size: 30px;
+  width: fit-content;
 }
 .btn {
+  margin-top: 40px;
   display: inline-block;
   width: 120px;
   height: 50px;
@@ -36,7 +39,6 @@ h1 {
   background-color: limegreen;
   border: 2px solid rgb(0, 100, 0, 0.5);
   cursor: pointer;
-  margin-bottom: 30px;
 }
 .btn:hover {
   background-color: rgb(0, 200, 0);
@@ -57,6 +59,7 @@ h1 {
 }
 .grid {
   display: flex;
+  margin-top: 40px;
   flex-wrap: wrap;
   height: 300px;
   width: 400px;
@@ -65,7 +68,7 @@ h1 {
 .instructions {
   margin-top: 40px;
   color: #fff;
-  font-size: medium;
+  font-size: 35px;
   color: silver;
   display: none;
 }
@@ -73,4 +76,8 @@ h1 {
   margin-left: 70px;
   font-size: 40px;
   color: coral;
+}
+li {
+  margin-top: 5px;
+  font-size: 20px;
 }
